Модуль Common-parser удален. В модуль Node добавлен сервис ScheduleService.java. настроить получение расписания занятий со страницы университета. Протестировать работу.

--- a/node/src/main/resources/application.properties.example
+++ b/node/src/main/resources/application.properties.example
@@ -4,3 +4,8 @@ spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=denis
 spring.rabbitmq.password=p@ssw0rd
+
+sibsutis.loginUrl=https://my.sibsutis.ru/auth/
+sibsutis.scheduleUrl=https://my.sibsutis.ru/students/schedule/
+sibsutis.userName=
+sibsutis.password=
