--- a/node/pom.xml
+++ b/node/pom.xml
@@ -5,15 +5,15 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.example</groupId>
-        <artifactId>university-schedule-bot</artifactId>
+        <artifactId>workout-program-bot</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>node</artifactId>
 
     <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -47,8 +47,8 @@
 
         <dependency>
             <groupId>com.vladmihalcea</groupId>
-            <artifactId>hibernate-types-60</artifactId>
-            <version>2.21.1</version>
+            <artifactId>hibernate-types-52</artifactId>
+            <version>2.2.2</version>
         </dependency>
 
         <dependency>
