--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,81 @@
-version: '3.1'
+version: '3.8'
+
 services:
-  mongodb:
-    image: mongo
-    container_name: mongodb
-    ports:
-      - "27017:27017"
-    volumes:
-      - ./data:/data/db
+  auth-service:
+    image: auth-service:latest
+    build:
+      context: ./auth-service
     environment:
-      MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: example
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/authdb
+      - SPRING_DATASOURCE_USERNAME=userok
+      - SPRING_DATASOURCE_PASSWORD=p@ssword
+      - SPRING_JPA_HIBERNATE_DDL_AUTO=update
+    depends_on:
+      - db
+    networks:
+        - bot-network
+    ports:
+        - "8081:8080"
+
+  workout-service:
+    image: workout-service:latest
+    build:
+      context: ./workout-service
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/workoutdb
+      - SPRING_DATASOURCE_USERNAME=userok
+      - SPRING_DATASOURCE_PASSWORD=p@ssw0rd
+      - SPRING_JPA_HIBERNATE_DDL_AUTO=update
+    depends_on:
+      - db
+    networks:
+      - bot-network
+    ports:
+      - "8082:8080"
+
+  telegram-bot:
+    image: telegram-bot:latest
+    build:
+      context: ./telegram-bot
+    environment:
+      - TELEGRAM_BOT_TOKEN=your_telegram_bot_token
+      - TELEGRAM_BOT_USERNAME=your_bot_username
+      - TELEGRAM_WEBHOOK_URL=https://your.webhook.url
+    depends_on:
+      - workout-service
+      - auth-service
+    networks:
+      - bot-network
+    ports:
+      - "8083:8080"
+
+  db:
+    image: postgres:14
+    environment:
+      POSTGRES_USER: userok
+      POSTGRES_PASSWORD: p@ssw0rd
+      POSTGRES_DB: authdb
+    networks:
+      - bot-network
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
+
+  rabbitmq:
+    image: rabbitmq:3-management
+    environment:
+      RABBITMQ_DEFAULT_USER: user
+      RABBITMQ_DEFAULT_PASS: password
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    networks:
+      - bot-network
+
+networks:
+  bot-network:
+    driver: bridge
+
+volumes:
+  postgres-data:
