Продолжаем настраивать микросервисы. Создаем контейнеры. Настраиваем docker-compose.yml

--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,12 @@
     <artifactId>training-planner-bot</artifactId>
     <version>1.0.0</version>
     <packaging>pom</packaging>
+    <modules>
+        <module>training-service</module>
+        <module>auth-service</module>
+        <module>notification-service</module>
+        <module>progress-service</module>
+    </modules>
 
     <properties>
         <java.version>17</java.version>
