--- a/pom.xml
+++ b/pom.xml
@@ -19,10 +19,11 @@
         <module>auth-service</module>
         <module>notification-service</module>
         <module>progress-service</module>
+        <module>bot-service</module>
     </modules>
 
     <properties>
-        <java.version>17</java.version>
+        <java.version>21</java.version>
         <telegram.version>6.9.0</telegram.version> <!-- Вынесенная версия Telegram -->
     </properties>
 
