--- a/bot-service/pom.xml
+++ b/bot-service/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.project</groupId>
-        <artifactId>training-planner-bot</artifactId>
+        <artifactId>workout-program-bot</artifactId>
         <version>1.0.0</version>
     </parent>
 
