Создан модуль common-rabbitMq. Настроены листенеры

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
     <modules>
         <module>user-service</module>
         <module>bot-service</module>
+        <module>common-rabbitmq</module>
     </modules>
 
     <properties>
