--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -41,5 +41,11 @@
             <artifactId>log4j</artifactId>
             <version>1.2.17</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.project</groupId>
+            <artifactId>common-rabbitmq</artifactId>
+            <version>1.0.0</version>
+        </dependency>
     </dependencies>
 </project>
