--- a/bot-service/pom.xml
+++ b/bot-service/pom.xml
@@ -43,6 +43,11 @@
             <artifactId>log4j</artifactId>
             <version>1.2.17</version>
         </dependency>
+        <dependency>
+            <groupId>com.project</groupId>
+            <artifactId>common-rabbitmq</artifactId>
+            <version>1.0.0</version>
+        </dependency>
 
         <!-- Lombok -->
         <dependency>
