--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>user-service</module>
         <module>bot-service</module>
         <module>common-rabbitmq</module>
+        <module>common-jpa</module>
     </modules>
 
     <properties>
